<resources>
    <string name="app_name">Remember Color</string>
    <string name="start">Start</string>
    <string name="highest_level">The highest grade : </string>
    <string name="latest_level">The latest grade : </string>
    <string name="ranking">Ranking</string>
    <string name="current_level">Current Level : </string>
    <string name="remaining_chance">Remaining Chance </string>
    <string name="current_record">Record : </string>
    <string name="take_time">Time : </string>
    <string name="replay">Replay</string>
    <string name="go_home">Go Home</string>
    <string name="leaderboard_id">CgkI1_yYquwTEAIQAQ</string>
</resources>
