<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wooastudio.remember_color.MainActivity">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="@dimen/main_image_width_height"
        android:layout_height="@dimen/main_image_width_height"
        android:src="@drawable/remember3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_page_top_margin"/>

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@+id/titleImage"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/item_space"/>

    <RelativeLayout
        android:id="@+id/startButtonLayout"
        android:layout_width="@dimen/start_game_button_width"
        android:layout_height="@dimen/start_game_button_height"
        android:layout_below="@id/titleView"
        android:layout_marginTop="@dimen/item_space"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@drawable/ripple_background">

        <ImageView
            android:id="@+id/play_image"
            android:layout_width="@dimen/play_image_width_height"
            android:layout_height="@dimen/play_image_width_height"
            android:layout_centerVertical="true"
            android:src="@drawable/play"
            android:layout_marginLeft="@dimen/textview_space_margin"
            android:layout_alignParentLeft="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/play_image" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:text="@string/start"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/highestLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/startButtonLayout"
        android:layout_marginTop="@dimen/textview_space_margin">

        <TextView
            android:id="@+id/highestLevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/highest_level" />

        <TextView
            android:id="@+id/highestLevelCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_space_margin"
            android:textSize="15dp"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text=", "
            android:visibility="gone"/>

        <TextView
            android:id="@+id/highestLevelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="00:00:00"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/latestLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/highestLevel"
        >

        <TextView
            android:id="@+id/latestLevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/latest_level"/>

        <TextView
            android:id="@+id/latestLevelCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_space_margin"
            android:textSize="15dp"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text=", "
            android:visibility="gone"/>

        <TextView
            android:id="@+id/latestLevelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="00:00:00"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rankingButtonLayout"
        android:layout_width="@dimen/ranking_button_width"
        android:layout_height="@dimen/ranking_button_height"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/item_space"
        android:clickable="true"
        android:background="@drawable/ripple_background"
        android:visibility="gone">

        <ImageView
            android:id="@+id/rank"
            android:layout_width="@dimen/play_image_width_height"
            android:layout_height="@dimen/play_image_width_height"
            android:layout_centerVertical="true"
            android:src="@drawable/rank"
            android:layout_marginLeft="@dimen/textview_space_margin"
            android:layout_alignParentLeft="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/rank" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/ranking"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
